--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,776 @@
-div{
-	border: 1px solid black;
-	background-color: #a7d8e2;
-	color: #e8f7ee;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6{
-	text-align: center;
-}
+@charset "UTF-8";
+/* =================================================================================================================================================
+====================================================================================================================================================
+   
+	Seamless grid v1 by @nickisnoble & @alexjhandler.
+
+	MIT license, let us know if you make something cool. 
+	Please hack this thing to pieces and may it aid you in your quest.
+
+====================================================================================================================================================
+================================================================================================================================================= */
+/*! normalize.css v2.1.3 | MIT License | git.io/normalize */
+/* ==========================================================================
+   HTML5 display definitions
+   ========================================================================== */
+/**
+ * Correct `block` display not defined in IE 8/9.
+ */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+nav,
+section,
+summary {
+  display: block; }
+
+/**
+ * Correct `inline-block` display not defined in IE 8/9.
+ */
+audio,
+canvas,
+video {
+  display: inline-block; }
+
+/**
+ * Prevent modern browsers from displaying `audio` without controls.
+ * Remove excess height in iOS 5 devices.
+ */
+audio:not([controls]) {
+  display: none;
+  height: 0; }
+
+/**
+ * Address `[hidden]` styling not present in IE 8/9.
+ * Hide the `template` element in IE, Safari, and Firefox < 22.
+ */
+[hidden],
+template {
+  display: none; }
+
+/* ==========================================================================
+   Base
+   ========================================================================== */
+/**
+ * 1. Set default font family to sans-serif.
+ * 2. Prevent iOS text size adjust after orientation change, without disabling
+ *    user zoom.
+ */
+html {
+  font-family: sans-serif;
+  /* 1 */
+  -ms-text-size-adjust: 100%;
+  /* 2 */
+  -webkit-text-size-adjust: 100%;
+  /* 2 */ }
+
+/**
+ * Remove default margin.
+ */
+body {
+  margin: 0; }
+
+/* ==========================================================================
+   Links
+   ========================================================================== */
+/**
+ * Remove the gray background color from active links in IE 10.
+ */
+a {
+  background: transparent; }
+
+/**
+ * Address `outline` inconsistency between Chrome and other browsers.
+ */
+a:focus {
+  outline: thin dotted; }
+
+/**
+ * Improve readability when focused and also mouse hovered in all browsers.
+ */
+a:active,
+a:hover {
+  outline: 0; }
+
+/* ==========================================================================
+   Typography
+   ========================================================================== */
+/**
+ * Address variable `h1` font-size and margin within `section` and `article`
+ * contexts in Firefox 4+, Safari 5, and Chrome.
+ */
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0; }
+
+/**
+ * Address styling not present in IE 8/9, Safari 5, and Chrome.
+ */
+abbr[title] {
+  border-bottom: 1px dotted; }
+
+/**
+ * Address style set to `bolder` in Firefox 4+, Safari 5, and Chrome.
+ */
+b,
+strong {
+  font-weight: bold; }
+
+/**
+ * Address styling not present in Safari 5 and Chrome.
+ */
+dfn {
+  font-style: italic; }
+
+/**
+ * Address differences between Firefox and other browsers.
+ */
+hr {
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  height: 0; }
+
+/**
+ * Address styling not present in IE 8/9.
+ */
+mark {
+  background: #ff0;
+  color: #000; }
+
+/**
+ * Correct font family set oddly in Safari 5 and Chrome.
+ */
+code,
+kbd,
+pre,
+samp {
+  font-family: monospace, serif;
+  font-size: 1em; }
+
+/**
+ * Improve readability of pre-formatted text in all browsers.
+ */
+pre {
+  white-space: pre-wrap; }
+
+/**
+ * Set consistent quote types.
+ */
+q {
+  quotes: "\201C" "\201D" "\2018" "\2019"; }
+
+/**
+ * Address inconsistent and variable font size in all browsers.
+ */
+small {
+  font-size: 80%; }
+
+/**
+ * Prevent `sub` and `sup` affecting `line-height` in all browsers.
+ */
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline; }
+
+sup {
+  top: -0.5em; }
+
+sub {
+  bottom: -0.25em; }
+
+/* ==========================================================================
+   Embedded content
+   ========================================================================== */
+/**
+ * Remove border when inside `a` element in IE 8/9.
+ */
+img {
+  border: 0; }
+
+/**
+ * Correct overflow displayed oddly in IE 9.
+ */
+svg:not(:root) {
+  overflow: hidden; }
+
+/* ==========================================================================
+   Figures
+   ========================================================================== */
+/**
+ * Address margin not present in IE 8/9 and Safari 5.
+ */
+figure {
+  margin: 0; }
+
+/* ==========================================================================
+   Forms
+   ========================================================================== */
+/**
+ * Define consistent border, margin, and padding.
+ */
+fieldset {
+  border: 1px solid #c0c0c0;
+  margin: 0 2px;
+  padding: 0.35em 0.625em 0.75em; }
+
+/**
+ * 1. Correct `color` not being inherited in IE 8/9.
+ * 2. Remove padding so people aren't caught out if they zero out fieldsets.
+ */
+legend {
+  border: 0;
+  /* 1 */
+  padding: 0;
+  /* 2 */ }
+
+/**
+ * 1. Correct font family not being inherited in all browsers.
+ * 2. Correct font size not being inherited in all browsers.
+ * 3. Address margins set differently in Firefox 4+, Safari 5, and Chrome.
+ */
+button,
+input,
+select,
+textarea {
+  font-family: inherit;
+  /* 1 */
+  font-size: 100%;
+  /* 2 */
+  margin: 0;
+  /* 3 */ }
+
+/**
+ * Address Firefox 4+ setting `line-height` on `input` using `!important` in
+ * the UA stylesheet.
+ */
+button,
+input {
+  line-height: normal; }
+
+/**
+ * Address inconsistent `text-transform` inheritance for `button` and `select`.
+ * All other form control elements do not inherit `text-transform` values.
+ * Correct `button` style inheritance in Chrome, Safari 5+, and IE 8+.
+ * Correct `select` style inheritance in Firefox 4+ and Opera.
+ */
+button,
+select {
+  text-transform: none; }
+
+/**
+ * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
+ *    and `video` controls.
+ * 2. Correct inability to style clickable `input` types in iOS.
+ * 3. Improve usability and consistency of cursor style between image-type
+ *    `input` and others.
+ */
+button,
+html input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+  -webkit-appearance: button;
+  /* 2 */
+  cursor: pointer;
+  /* 3 */ }
+
+/**
+ * Re-set default cursor for disabled elements.
+ */
+button[disabled],
+html input[disabled] {
+  cursor: default; }
+
+/**
+ * 1. Address box sizing set to `content-box` in IE 8/9/10.
+ * 2. Remove excess padding in IE 8/9/10.
+ */
+input[type="checkbox"],
+input[type="radio"] {
+  box-sizing: border-box;
+  /* 1 */
+  padding: 0;
+  /* 2 */ }
+
+/**
+ * 1. Address `appearance` set to `searchfield` in Safari 5 and Chrome.
+ * 2. Address `box-sizing` set to `border-box` in Safari 5 and Chrome
+ *    (include `-moz` to future-proof).
+ */
+input[type="search"] {
+  -webkit-appearance: textfield;
+  /* 1 */
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  /* 2 */
+  box-sizing: content-box; }
+
+/**
+ * Remove inner padding and search cancel button in Safari 5 and Chrome
+ * on OS X.
+ */
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none; }
+
+/**
+ * Remove inner padding and border in Firefox 4+.
+ */
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+  border: 0;
+  padding: 0; }
+
+/**
+ * 1. Remove default vertical scrollbar in IE 8/9.
+ * 2. Improve readability and alignment in all browsers.
+ */
+textarea {
+  overflow: auto;
+  /* 1 */
+  vertical-align: top;
+  /* 2 */ }
+
+/* ==========================================================================
+   Tables
+   ========================================================================== */
+/**
+ * Remove most spacing between table cells.
+ */
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+/* ===========================================================================
+    Global
+   =========================================================================== */
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
+
+/* ==========================================================================
+   Seamless
+   ========================================================================== */
+.one, .two, .three, .four, .five, .six, .seven, .eight, .nine, .ten, .eleven, .twelve {
+  float: left;
+  padding-left: 0.75em;
+  padding-right: 0.75em; }
+
+.one .one, .one .two, .one .three,
+.one .four, .one .five, .one .six,
+.one .seven, .one .eight, .one .nine,
+.one .ten, .one .eleven, .one .twelve, .two .one, .two .two, .two .three,
+.two .four, .two .five, .two .six,
+.two .seven, .two .eight, .two .nine,
+.two .ten, .two .eleven, .two .twelve, .three .one, .three .two, .three .three,
+.three .four, .three .five, .three .six,
+.three .seven, .three .eight, .three .nine,
+.three .ten, .three .eleven, .three .twelve,
+.four .one,
+.four .two,
+.four .three,
+.four .four,
+.four .five,
+.four .six,
+.four .seven,
+.four .eight,
+.four .nine,
+.four .ten,
+.four .eleven,
+.four .twelve, .five .one, .five .two, .five .three,
+.five .four, .five .five, .five .six,
+.five .seven, .five .eight, .five .nine,
+.five .ten, .five .eleven, .five .twelve, .six .one, .six .two, .six .three,
+.six .four, .six .five, .six .six,
+.six .seven, .six .eight, .six .nine,
+.six .ten, .six .eleven, .six .twelve,
+.seven .one,
+.seven .two,
+.seven .three,
+.seven .four,
+.seven .five,
+.seven .six,
+.seven .seven,
+.seven .eight,
+.seven .nine,
+.seven .ten,
+.seven .eleven,
+.seven .twelve, .eight .one, .eight .two, .eight .three,
+.eight .four, .eight .five, .eight .six,
+.eight .seven, .eight .eight, .eight .nine,
+.eight .ten, .eight .eleven, .eight .twelve, .nine .one, .nine .two, .nine .three,
+.nine .four, .nine .five, .nine .six,
+.nine .seven, .nine .eight, .nine .nine,
+.nine .ten, .nine .eleven, .nine .twelve,
+.ten .one,
+.ten .two,
+.ten .three,
+.ten .four,
+.ten .five,
+.ten .six,
+.ten .seven,
+.ten .eight,
+.ten .nine,
+.ten .ten,
+.ten .eleven,
+.ten .twelve, .eleven .one, .eleven .two, .eleven .three,
+.eleven .four, .eleven .five, .eleven .six,
+.eleven .seven, .eleven .eight, .eleven .nine,
+.eleven .ten, .eleven .eleven, .eleven .twelve, .twelve .one, .twelve .two, .twelve .three,
+.twelve .four, .twelve .five, .twelve .six,
+.twelve .seven, .twelve .eight, .twelve .nine,
+.twelve .ten, .twelve .eleven, .twelve .twelve {
+  padding: 0; }
+
+.one {
+  width: 8.33333%; }
+
+.two {
+  width: 16.66667%; }
+
+.three {
+  width: 25.0%; }
+
+.four {
+  width: 33.33333%; }
+
+.five {
+  width: 41.66666%; }
+
+.six {
+  width: 50.0%; }
+
+.seven {
+  width: 58.33333%; }
+
+.eight {
+  width: 66.66666%; }
+
+.nine {
+  width: 75.0%; }
+
+.ten {
+  width: 83.33333%; }
+
+.eleven {
+  width: 91.66666%; }
+
+.twelve {
+  width: 100.0%; }
+
+.offset-one {
+  margin-left: 8.33333%; }
+
+.offset-two {
+  margin-left: 16.66667%; }
+
+.offset-three {
+  margin-left: 25.0%; }
+
+.offset-four {
+  margin-left: 33.33333%; }
+
+.offset-five {
+  margin-left: 41.66666%; }
+
+.offset-six {
+  margin-left: 50.0%; }
+
+.offset-seven {
+  margin-left: 58.33333%; }
+
+.offset-eight {
+  margin-left: 66.66666%; }
+
+.offset-nine {
+  margin-left: 75.0%; }
+
+.offset-ten {
+  margin-left: 83.33333%; }
+
+.offset-eleven {
+  margin-left: 91.66666%; }
+
+.offset-twelve {
+  margin-left: 100.0%; }
+
+.pull-right {
+  float: right; }
+
+.pull-left {
+  float: left; }
+
+@media only screen and (min-width: 481px) {
+  .tablet-one {
+    width: 8.33333%; }
+
+  .tablet-two {
+    width: 16.66667%; }
+
+  .tablet-three {
+    width: 25.0%; }
+
+  .tablet-four {
+    width: 33.33333%; }
+
+  .tablet-five {
+    width: 41.66666%; }
+
+  .tablet-six {
+    width: 50.0%; }
+
+  .tablet-seven {
+    width: 58.33333%; }
+
+  .tablet-eight {
+    width: 66.66666%; }
+
+  .tablet-nine {
+    width: 75.0%; }
+
+  .tablet-ten {
+    width: 83.33333%; }
+
+  .tablet-eleven {
+    width: 91.66666%; }
+
+  .tablet-twelve {
+    width: 100.0%; }
+
+  .tablet-offset-one {
+    margin-left: 8.33333%; }
+
+  .tablet-offset-two {
+    margin-left: 16.66667%; }
+
+  .tablet-offset-three {
+    margin-left: 25.0%; }
+
+  .tablet-offset-four {
+    margin-left: 33.33333%; }
+
+  .tablet-offset-five {
+    margin-left: 41.66666%; }
+
+  .tablet-offset-six {
+    margin-left: 50.0%; }
+
+  .tablet-offset-seven {
+    margin-left: 58.33333%; }
+
+  .tablet-offset-eight {
+    margin-left: 66.66666%; }
+
+  .tablet-offset-nine {
+    margin-left: 75.0%; }
+
+  .tablet-offset-ten {
+    margin-left: 83.33333%; }
+
+  .tablet-offset-eleven {
+    margin-left: 91.66666%; }
+
+  .tablet-offset-twelve {
+    margin-left: 100.0%; }
+
+  .tablet-pull-right {
+    float: right; }
+
+  .tablet-pull-left {
+    float: left; } }
+@media only screen and (min-width: 768px) {
+  .laptop-one {
+    width: 8.33333%; }
+
+  .laptop-two {
+    width: 16.66667%; }
+
+  .laptop-three {
+    width: 25.0%; }
+
+  .laptop-four {
+    width: 33.33333%; }
+
+  .laptop-five {
+    width: 41.66666%; }
+
+  .laptop-six {
+    width: 50.0%; }
+
+  .laptop-seven {
+    width: 58.33333%; }
+
+  .laptop-eight {
+    width: 66.66666%; }
+
+  .laptop-nine {
+    width: 75.0%; }
+
+  .laptop-ten {
+    width: 83.33333%; }
+
+  .laptop-eleven {
+    width: 91.66666%; }
+
+  .laptop-twelve {
+    width: 100.0%; }
+
+  .laptop-offset-one {
+    margin-left: 8.33333%; }
+
+  .laptop-offset-two {
+    margin-left: 16.66667%; }
+
+  .laptop-offset-three {
+    margin-left: 25.0%; }
+
+  .laptop-offset-four {
+    margin-left: 33.33333%; }
+
+  .laptop-offset-five {
+    margin-left: 41.66666%; }
+
+  .laptop-offset-six {
+    margin-left: 50.0%; }
+
+  .laptop-offset-seven {
+    margin-left: 58.33333%; }
+
+  .laptop-offset-eight {
+    margin-left: 66.66666%; }
+
+  .laptop-offset-nine {
+    margin-left: 75.0%; }
+
+  .laptop-offset-ten {
+    margin-left: 83.33333%; }
+
+  .laptop-offset-eleven {
+    margin-left: 91.66666%; }
+
+  .laptop-offset-twelve {
+    margin-left: 100.0%; }
+
+  .laptop-pull-right {
+    float: right; }
+
+  .laptop-pull-left {
+    float: left; } }
+@media only screen and (min-width: 1024px) {
+  .desk-one {
+    width: 8.33333%; }
+
+  .desk-two {
+    width: 16.66667%; }
+
+  .desk-three {
+    width: 25.0%; }
+
+  .desk-four {
+    width: 33.33333%; }
+
+  .desk-five {
+    width: 41.66666%; }
+
+  .desk-six {
+    width: 50.0%; }
+
+  .desk-seven {
+    width: 58.33333%; }
+
+  .desk-eight {
+    width: 66.66666%; }
+
+  .desk-nine {
+    width: 75.0%; }
+
+  .desk-ten {
+    width: 83.33333%; }
+
+  .desk-eleven {
+    width: 91.66666%; }
+
+  .desk-twelve {
+    width: 100.0%; }
+
+  .desk-offset-one {
+    margin-left: 8.33333%; }
+
+  .desk-offset-two {
+    margin-left: 16.66667%; }
+
+  .desk-offset-three {
+    margin-left: 25.0%; }
+
+  .desk-offset-four {
+    margin-left: 33.33333%; }
+
+  .desk-offset-five {
+    margin-left: 41.66666%; }
+
+  .desk-offset-six {
+    margin-left: 50.0%; }
+
+  .desk-offset-seven {
+    margin-left: 58.33333%; }
+
+  .desk-offset-eight {
+    margin-left: 66.66666%; }
+
+  .desk-offset-nine {
+    margin-left: 75.0%; }
+
+  .desk-offset-ten {
+    margin-left: 83.33333%; }
+
+  .desk-offset-eleven {
+    margin-left: 91.66666%; }
+
+  .desk-offset-twelve {
+    margin-left: 100.0%; }
+
+  .desk-pull-right {
+    float: right; }
+
+  .desk-pull-left {
+    float: left; } }
+/* =================================================================================================================================================
+====================================================================================================================================================
+   
+	Your code here do so wow
+
+	         ▄              ▄    
+	        ▌▒█           ▄▀▒▌   
+	        ▌▒▒█        ▄▀▒▒▒▐   
+	       ▐▄▀▒▒▀▀▀▀▄▄▄▀▒▒▒▒▒▐   
+	     ▄▄▀▒░▒▒▒▒▒▒▒▒▒█▒▒▄█▒▐   
+	   ▄▀▒▒▒░░░▒▒▒░░░▒▒▒▀██▀▒▌    
+	  ▐▒▒▒▄▄▒▒▒▒░░░▒▒▒▒▒▒▒▀▄▒▒▌  
+	  ▌░░▌█▀▒▒▒▒▒▄▀█▄▒▒▒▒▒▒▒█▒▐  
+	 ▐░░░▒▒▒▒▒▒▒▒▌██▀▒▒░░░▒▒▒▀▄▌ 
+	 ▌░▒▄██▄▒▒▒▒▒▒▒▒▒░░░░░░▒▒▒▒▌ 
+	▀▒▀▐▄█▄█▌▄░▀▒▒░░░░░░░░░░▒▒▒▐ 
+	▐▒▒▐▀▐▀▒░▄▄▒▄▒▒▒▒▒▒░▒░▒░▒▒▒▒▌
+	▐▒▒▒▀▀▄▄▒▒▒▄▒▒▒▒▒▒▒▒░▒░▒░▒▒▐ 
+	 ▌▒▒▒▒▒▒▀▀▀▒▒▒▒▒▒░▒░▒░▒░▒▒▒▌ 
+	 ▐▒▒▒▒▒▒▒▒▒▒▒▒▒▒░▒░▒░▒▒▄▒▒▐  
+	  ▀▄▒▒▒▒▒▒▒▒▒▒▒░▒░▒░▒▄▒▒▒▒▌  
+	    ▀▄▒▒▒▒▒▒▒▒▒▒▄▄▄▀▒▒▒▒▄▀   
+	      ▀▄▄▄▄▄▄▀▀▀▒▒▒▒▒▄▄▀     
+	         ▒▒▒▒▒▒▒▒▒▒▀▀        
+
+	- DOGE
+
+====================================================================================================================================================
+================================================================================================================================================= */
