--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -1,10 +1,13 @@
-*, 
-*:before, 
-*:after {
-  -moz-box-sizing: border-box; 
-  -webkit-box-sizing: border-box; 
-  box-sizing: border-box;
- }
+/*! normalize.css v2.1.3 | MIT License | git.io/normalize */
+
+/* ==========================================================================
+   HTML5 display definitions
+   ========================================================================== */
+
+/**
+ * Correct `block` display not defined in IE 8/9.
+ */
+
 article,
 aside,
 details,
