--- a/scss/_seamless.scss
+++ b/scss/_seamless.scss
@@ -11,7 +11,7 @@
 .four, .five, .six,
 .seven, .eight, .nine,
 .ten, .eleven, .twelve{ 
-    // kill padding on nests till I think of a better fix
+    // kill padding on nests till I think of a better fix. This is going to be hugigantinormous.
     .one, .two, .three,
     .four, .five, .six,
     .seven, .eight, .nine,
