--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,8 +1,10 @@
-
 /* =================================================================================================================================================
 ====================================================================================================================================================
    
-	Your code here do so wow
+	Your code here 
+	such code
+	much syntax
+	such cascade
 
 	         ▄              ▄    
 	        ▌▒█           ▄▀▒▌   
